--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react-app": "^9.1.2",
+    "easy-scroll": "^0.6.0",
     "emailjs-com": "^2.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
